@@ -190,3 +190,4 @@ T_341vob_interlaced_h264:94f3e7791ee247b7326a42237ea00520:passed:20120304-163313
 T_342m2ts_interlaced_h264_from_arte:8c4d727aa228e4738c598e3ddc9d4571:passed:20120304-165917:3.86679733
 T_343m2ts_interlaced_h264_match_of_the_day:fdab49f2f33981826793bb66aab97ca5:passed:20120304-171453:2.873804415
 T_344microdvd_recognition:ok:passed:20120304-175209:0.082792556
+T_345flag_enabled:efe07b85cd349a040ed79402256bd6ea-89e9b90881c73d55ac4eda07e20effe5:passed:20120304-181150:0.135757829
